--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "DBMS LAB Project ",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,8 +28,11 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "camelcase": "^8.0.0",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.3"
+    "mysql2": "^3.9.3",
+    "nodemon": "^3.1.0"
   }
 }
