--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   },
   "homepage": "https://github.com/anish-g22/dbms_backend#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "camelcase": "^8.0.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.3",
     "nodemon": "^3.1.0"
