--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.3",
     "nodemon": "^3.1.0"
